funcioens basicas y funciones con parametros requeridos

--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   </head>
   <body></body>
   <!-- <script src="app.js"></script> -->
-  <script src="./datos/null-undefined.js"></script>
+  <script src="./funciones/args-required.js"></script>
 </html>
