Objetos y objetos con tipos personalizados

--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   </head>
   <body></body>
   <!-- <script src="app.js"></script> -->
-  <script src="./funciones/args-rest.js"></script>
+  <script src="./objetosyTiposPersonalizados/objetos.js"></script>
 </html>
